# sindri-rust

./: .bashrc.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md
.github/assets/recordings/: integration.vcr.json
.github/workflows/: ci.yaml
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/commands/: clone.rs  deploy.rs  login.rs  mod.rs
cli/tests/: cli.rs
examples/: README.md
examples/basic-demo/: Cargo.toml  Nargo.toml  README.md  sindri.json
examples/basic-demo/src/: main.rs
examples/local-db/: Cargo.toml  README.md
examples/local-db/src/: main.rs
examples/sp1-proof/: Cargo.toml  README.md
examples/sp1-proof/src/: main.rs
examples/web3-demo/: Cargo.toml  README.md  example-input.json  rust-toolchain.toml  sindri.json
examples/web3-demo/circuit/: NOTICE  README.md  circuit.circom  utils.circom
examples/web3-demo/circuit/circuit_cpp/: circuit.cpp
examples/web3-demo/circuit/circuit_js/: circuit.wasm
examples/web3-demo/contract/: README.md  Verifier.sol  verifier.json
examples/web3-demo/src/: main.rs  sudoku_io.rs  types.rs
examples/zkvm-demo/: .sindriignore  README.md  example-input.json  sindri.json
examples/zkvm-demo/program/: Cargo.toml  NOTICE  README.md  regex-program
examples/zkvm-demo/script/: Cargo.toml
examples/zkvm-demo/script/src/: main.rs
openapi/: .openapi-generator-ignore  CHANGELOG.md  Cargo.toml  README.md  openapi.patch
openapi/.openapi-generator/: FILES
openapi/docs/: Access.md  ActionResponse.md  ApiKey.md  ApiKeyDoesNotExistResponse.md  ApiKeyErrorResponse.md  ApiKeyResponse.md  ApikeyId.md  AuthorizationApi.md  BoojumCircuitInfoResponse.md  CircomCircuitInfoResponse.md  CircuitCreateInput.md  CircuitDoesNotExistResponse.md  CircuitId.md  CircuitInfoResponse.md  CircuitIsNotReadyResponse.md  CircuitProveInput.md  CircuitSize.md  CircuitStatusResponse.md  CircuitType.md  CircuitsApi.md  ComingSoonResponse.md  ComputeTimeIso8601.md  ComputeTimeSeconds.md  ComputeTimes.md  ComputeTimes1.md  ContractCode.md  DateCreatedAfter.md  DateCreatedBefore.md  DateExpires.md  DateLastUsed.md  Error.md  Error1.md  ExceptionId.md  Field.md  FileSize.md  ForgeInternalErrorResponse.md  ForgeInvalidUploadResponse.md  ForgeValueErrorResponse.md  GnarkCircuitInfoResponse.md  Halo2CircuitInfoResponse.md  (+63 more)
openapi/patches/: README.md  circuit_creation.patch  circuit_delete.patch  circuit_status_fix.patch  define_any_ltgt.patch  export_some_internals.patch  internal_api_lintfixes.patch  no_circuit_response_nest.patch  project_option_id_fix.patch  rm_circuit_id_option.patch  rm_id_options_restore_download.patch  rm_proof_id_option.patch  team_lint_fixes.patch  two_input_modes.patch
openapi/src/apis/: authorization_api.rs  circuits_api.rs  configuration.rs  internal_api.rs  internal_circuits_api.rs  internal_projects_api.rs  internal_proofs_api.rs  internal_teams_api.rs  internal_users_api.rs  mod.rs  proofs_api.rs  token_api.rs
openapi/src/models/: access.rs  action_response.rs  api_key.rs  api_key_does_not_exist_response.rs  api_key_error_response.rs  api_key_response.rs  apikey_id.rs  boojum_circuit_info_response.rs  circom_circuit_info_response.rs  circuit_create_input.rs  circuit_does_not_exist_response.rs  circuit_id.rs  circuit_info_response.rs  circuit_is_not_ready_response.rs  circuit_prove_input.rs  circuit_size.rs  circuit_status_response.rs  circuit_type.rs  coming_soon_response.rs  compute_time_iso8601.rs  compute_time_seconds.rs  compute_times.rs  compute_times_1.rs  contract_code.rs  date_created_after.rs  date_created_before.rs  date_expires.rs  date_last_used.rs  error.rs  error_1.rs  exception_id.rs  field.rs  file_size.rs  forge_internal_error_response.rs  forge_invalid_upload_response.rs  forge_value_error_response.rs  gnark_circuit_info_response.rs  halo2_circuit_info_response.rs  hermez_circuit_info_response.rs  input.rs  (+74 more)
sandbox/: Cargo.toml
sandbox/src/: main.rs
scripts/: README.md  test-sdk.sh  update-ci-fixtures.sh  update-sdk.sh
sindri/: CHANGELOG.md  Cargo.toml
sindri-rs/: Cargo.toml
sindri-rs/src/: client.rs  client_translation.rs  custom_middleware.rs  lib.rs  types.rs  utils.rs
sindri-rs/src/integrations/: sp1.rs
sindri-rs/src/tests/: circuit_method_tests.rs  client_tests.rs  middleware_tests.rs  mod.rs
sindri-rs/tests/: circuits.rs  cli.rs  projects.rs  proofs.rs
sindri-rs/tests/factory/: mod.rs
sindri-rs/tests/recordings/: replay.vcr.json
sindri-rs/tests/resources/: replay.vcr.json
sindri/src/: client.rs  custom_middleware.rs  job_create.rs  jwt.rs  lib.rs  types.rs  utils.rs
sindri/src/integrations/: mod.rs  sp1.rs  sp1_v4.rs  sp1_v5.rs
sindri/tests/: offline.rs  projects.rs  proofs.rs
