[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["Sindri Labs <support@sindri.app>"]
homepage = "https://sindri.app/"
repository = "https://github.com/Sindri-Labs/sindri-rust"
license = "MIT"
keywords = ["sindri", "sdk", "api", "zero-knowledge", "zkvm"]

[workspace]
resolver = "2"
members = [
    "cli",
    "openapi",
    "sindri",
]
exclude = [
    "examples/sp1-proof",
]

[workspace.dependencies]
sindri = { path = "sindri", version = "0.2.2" }
sindri-openapi = { path = "openapi", version = "0.2.2" }
