[workspace.package]
version = "0.2.3"
edition = "2021"
authors = ["Sindri Labs <support@sindri.app>"]
homepage = "https://sindri.app/"
repository = "https://github.com/Sindri-Labs/sindri-rust"
license = "MIT"
keywords = ["sindri", "sdk", "api", "zero-knowledge", "zkvm"]

[workspace]
resolver = "2"
members = [
    "cli",
    "openapi",
    "sindri",
]
exclude = [
    "examples/basic-demo",
    "examples/local-db",
    "examples/sp1-proof",
    "examples/web3-demo",
    "examples/zkvm-demo"
]

[workspace.dependencies]
sindri = { path = "sindri", version = "0.2.3" }
sindri-openapi = { path = "openapi", version = "0.2.3" }
