[package]
name = "sindri-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name="cargo-sindri"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
console = "0.15.10"
sindri-rs = { path = "../sindri-rs"}

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tokio = { version = "1.0", features = ["full"] }
wiremock = "0.6.2"

[features]
default = ["sindri-rs/rich-terminal"]
record = ["sindri-rs/record"]
replay = ["sindri-rs/replay"]
