[package]
name = "sindri-cli"
description = "A command-line interface for interacting with Sindri's API"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[[bin]]
name="cargo-sindri"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
console = "0.15.10"
dialoguer = "0.11.0"
flate2 = "1.0.35"
regex = "1.11.1"
sindri-openapi = { workspace = true }
sindri = { workspace = true }
tar = "0.4.43"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.2"
urlencoding= "2.1.3"
wiremock = "0.6.2"

[features]
default = ["sindri/rich-terminal"]
record = ["sindri/record"]
replay = ["sindri/replay"]
