[package]
name = "sindri-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
openapi = { path = "../openapi" }
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json", "multipart"]}
reqwest-middleware = "0.3.0"
reqwest-retry = { version = "0.7.0", features = ["tracing"] }
serde_json = "^1.0"
async-trait = "0.1.83"
http = "1.2.0"
tracing = "0.1.41"
tracing-subscriber = "0.3"
flate2 = "1.0.35"
ignore = "0.4.23"
tar = "0.4.43"
rand = "0.8.5"
regex = "1.11.1"
# fork that supports newer reqwest-middleware (see https://github.com/ChorusOne/rvcr/pull/22)
rvcr = { git = "https://github.com/lededje/rvcr", branch = "update-reqwest-middleware", optional = true }

[dev-dependencies]
wiremock = "0.6.2"
tempfile = "3.2"
temp-env = "0.3"

[features]
default = []
record = ["dep:rvcr"]
replay = ["dep:rvcr"]