[package]
name = "sindri-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name="cargo-sindri"

[dependencies]
async-trait = "0.1.83"
base64 = "0.22.1"
clap = { version = "4.0", features = ["derive"] }
flate2 = "1.0.35"
http = "1.2.0"
ignore = "0.4.23"
openapi = { path = "../openapi" }
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json", "multipart"]}
reqwest-middleware = "0.3.0"
reqwest-retry = { version = "0.7.0", features = ["tracing"] }
serde_json = "^1.0"
tar = "0.4.43"
tracing = "0.1.41"
tracing-subscriber = "0.3"
tokio = { version = "1.42.0", features = ["full"] }

# Integration test dependencies
# fork that supports newer reqwest-middleware (see https://github.com/ChorusOne/rvcr/pull/22)
rvcr = { git = "https://github.com/lededje/rvcr", branch = "update-reqwest-middleware", optional = true }

# Framework-specific dependencies
rmp-serde = { version = "1.3.0", optional = true }
sp1-sdk-v3 = { package = "sp1-sdk", version = "3.0.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.2"
temp-env = "0.3"
tracing-test = "0.2"
wiremock = "0.6.2"

[features]
default = []

# Record and replay middleware, for internal testing
record = ["dep:rvcr"]
replay = ["dep:rvcr"]

# Framework-specific features
sp1-v3 = ["dep:sp1-sdk-v3", "dep:rmp-serde"]
