[package]
name = "sindri"
description = "Rust SDK for the Sindri API"
readme = "../README.md"
documentation = "https://docs.rs/sindri"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
async-compression = { version = "0.4.18", features = ["tokio", "zstd"] }
async-trait = "0.1.83"
base64 = "0.22.1"
flate2 = "1.0.35"
http = "1.2.0"
ignore = "0.4.23"
sindri-openapi = { workspace = true }
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream", "zstd"]}
reqwest-middleware = "0.4.1"
reqwest-retry = { version = "0.7.0", features = ["tracing"] }
serde_json = "^1.0"
tar = "0.4.43"
tracing = "0.1.41"
tracing-subscriber = "0.3"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }

# Optional dependencies
console = { version = "0.15.10", optional = true }
indicatif = { version = "0.17.10", optional = true }

# Integration test dependencies
anyhow = { version = "^1", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
lazy_static = { version = "1.4", optional = true }
vcr-cassette = { version = "2", optional = true}

# Framework-specific dependencies
rmp-serde = { version = "1.3.0", optional = true }
sp1-sdk-v3 = { package = "sp1-sdk", version = "3.0.0", optional = true }
sp1-sdk-v4 = { package = "sp1-sdk", version = "4.0.0", optional = true }

[dev-dependencies]
tempfile = "3.2"
temp-env = "0.3"
tracing-test = "0.2"
tokio-test = "0.4.4"
wiremock = "0.6.2"

[features]
default = []

# Record and replay middleware, for internal testing
record = ["dep:anyhow", "dep:chrono", "dep:lazy_static", "dep:vcr-cassette"]
replay = ["dep:anyhow", "dep:chrono", "dep:lazy_static", "dep:vcr-cassette"]
compress = []

# CLI-specific features
rich-terminal = ["dep:console", "dep:indicatif"]

# Framework-specific features
sp1-v3 = ["dep:sp1-sdk-v3", "dep:rmp-serde"]
sp1-v4 = ["dep:sp1-sdk-v4", "dep:rmp-serde"]
