[package]
name = "local-db"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.40", features = ["serde"] }
rocksdb = "0.23.0"
serde = "1.0.219"
serde_json = "1.0.140"
sindri = { path = "../../sindri"}
tokio = { version = "1.42.0", features = ["full"] }
uuid = "1.16.0"
