[package]
name = "deps-coexist"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-provider = { version = "0.11.1", features = ["anvil-node"] }
alloy = { version = "0.11.1", features = ["full"] }
eyre = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sindri = "0.2.2"
tokio = { version = "1.42.0", features = ["full"] }
termion = "2.0.1"
